# aoc

./: .gitignore  Cargo.toml  README.md  getinput.sh
proc/: Cargo.toml
proc/src/: lib.rs
src/: futil.rs  intcode.rs  main.rs  y2019p1.rs  y2019p2.rs  y2019p3.rs  y2019p4.rs  y2019p5.rs  y2020p1.rs  y2020p10.rs  y2020p11.rs  y2020p12.rs  y2020p13.rs  y2020p2.rs  y2020p3.rs  y2020p4.rs  y2020p5.rs  y2020p6.rs  y2020p7.rs  y2020p8.rs  y2020p9.rs  y2021p1.rs  y2021p2.rs  y2021p3.rs  y2021p4.rs
