[package]
name = "aoc"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
proc = { path = "proc/" }
lazy_static = "1.4"
regex = "1.4.2"
reqwest = "0.11"
structopt = "0.3"
tokio = "1"
